--- a/MainStyleSheet.css
+++ b/MainStyleSheet.css
@@ -1,1 +1,8 @@
 /* main style sheet for Site */
+body {
+  padding-top: 5rem;
+}
+.starter-template {
+  padding: 3rem 1.5rem;
+  text-align: center;
+}
