--- a/MainStyleSheet.css
+++ b/MainStyleSheet.css
@@ -50,12 +50,13 @@ img.logo {
 }
 
 .search {
-  min-width: 80%;
+  min-width: 90%;
+  align-items: right;
 }
 
 #buttons {
   padding-top: 50px;
-  width: 80%;
+  min-width: 90%;
 }
 
 #blackboardButton {
@@ -84,12 +85,24 @@ img.logo {
 
 #campusMapButton {
   margin: 10px;
+  margin-left: 0px;
 }
 
 #findLecturerButton {
   margin: 10px;
+  margin-left: 0px;
 }
 
 #covid {
   margin: 10px;
+  margin-left: 0px;
+}
+
+.h3 {
+  text-align: centre;
+  padding-bottom: 10px;
+}
+
+.card {
+  margin-bottom: 7px;
 }
