--- a/MainStyleSheet.css
+++ b/MainStyleSheet.css
@@ -19,22 +19,37 @@ border: none;
 cursor: pointer;
 }
 
-.dropDown {
+#dropDown {
   display: block;
-  margin: 0 auto;
   text-align: left;
-  position: relative;
-  height: 10%;
-  width: auto;
+  position: absolute;
+  right: .01%;
+  height: fit-content;
+  width: 100%;
+  background-color: white;
 }
 
-.result  {
-  position: relative;
+
+#dropDown2 {
+  display: block;
   text-align: left;
+  position: absolute;
+  height: fit-content;
+  width: 100%;
+  background-color: white;
+}
+
+
+.result  {
+  font-size: large;
+  display: inline-block;
+ width: 100%;
+  position: relative;
+  text-align: justify;
   align-items: left;
   margin: 0 auto;
   border-style: none;
-  background-color: gray;
+  background-color: white;
   align-items: left;
 }
 
@@ -42,6 +57,12 @@ cursor: pointer;
   background-color: lightblue;
 }
 
+
+#topSearch {
+  text-align: left;
+  align-items: left;
+  position: relative;
+}
 
 img.logo {
   max-height: 50px;
@@ -51,6 +72,7 @@ img.logo {
 #searchdiv {
   text-align: left;
   align-items: left;
+  position: relative;
 }
 
 #fuzzySearch {
