--- a/DarkModeStyleSheet.css
+++ b/DarkModeStyleSheet.css
@@ -1,315 +1,346 @@
 /* main style sheet for Site */
 body {
-    padding-top: 5rem;
-  
-    background-color: whitesmoke;
-  
-  }
-  .search {
-    text-align: left;
-    width: 40%;
-    margin-top: auto;
-    background-color: white;
-  }
-  
-  
-  .moonButton{
+  padding-top: 5rem;
+
+  background-color: rgb(31, 29, 29);
+
+}
+.search {
+  text-align: left;
+  width: 40%;
+  margin-top: auto;
+  background-color: white;
+}
+
+
+.moonButton{
+background-color: transparent; 
+border: none;
+cursor: pointer;
+}
+
+.sunButton{
   background-color: transparent; 
   border: none;
   cursor: pointer;
   }
+
+#dropDown {
+  display: block;
+  text-align: left;
+  position: absolute;
+  right: .01%;
+  height: fit-content;
+  width: 100%;
+  background-color: white;
+}
+
+
+#dropDown2 {
+  display: block;
+  text-align: left;
+  position: absolute;
+  height: fit-content;
+  width: 100%;
+  background-color: white;
+}
+
+
+.result  {
+  font-size: large;
+  display: inline-block;
+ width: 100%;
+  position: relative;
+  text-align: justify;
+  align-items: left;
+  margin: 0 auto;
+  border-style: none;
+  background-color: white;
+  align-items: left;
+}
+
+.result:hover{
+  background-color: lightblue;
+}
+
+
+#topSearch {
+  text-align: left;
+  align-items: left;
+  position: relative;
+}
+
+img.logo {
+  max-height: 50px;
+  width: auto;
+}
+
+#searchdiv {
+  text-align: left;
+  align-items: left;
+  position: relative;
+  color: white;
+  background-color: #1a68ce;
+}
+
+#fuzzySearch {
+  min-width: 80%;
+  align-items: right;
+}
+
+
+#buttons {
+  padding-top: 50px;
+  min-width: 90%;
   
-  #dropDown {
-    display: block;
-    text-align: left;
-    position: absolute;
-    right: .01%;
-    height: fit-content;
-    width: 100%;
-    background-color: gray;
+}
+
+#buttons.container {
+  align-content: left;
+  
+}
+
+#blackboardButton {
+  padding-top: 5px;
+  margin:5px;
+  min-width: 105px;
+}
+
+#evisionButton {
+  padding-top: 5px;
+  margin:5px;
+  min-width: 105px;
+}
+
+#officeButton {
+  padding-top: 5px;
+  margin:5px;
+  min-width: 105px;
+}
+
+#covidButton {
+  padding-top: 5px;
+  margin:5px;
+  min-width: 105px;
+}
+
+
+
+.h3 {
+  text-align: centre;
+  padding-bottom: 10px;
+}
+
+.card {
+  margin-bottom: 7px;
+}
+
+.moonButton {
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
+#navSearch {
+  margin: 3px;
+}
+
+
+.site-footer
+{
+  background-color:#26272b;
+  font-size:15px;
+  line-height:24px;
+  color:#737373;
+  height: 100%;
+  width: 100%;
+}
+
+.site-footer hr.small
+{
+  margin:20px 0
+}
+.site-footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+.site-footer a
+{
+  color:#737373;
+}
+.site-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.site-footer .social-icons
+{
+  text-align:right
+}
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#33353d
+}
+.copyright-text
+{
+  margin:0
+}
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
   }
-  
-  
-  #dropDown2 {
-    display: block;
-    text-align: left;
-    position: absolute;
-    height: fit-content;
-    width: 100%;
-    background-color: darkblue;
-  }
-  
-  
-  .result  {
-    font-size: large;
-    display: inline-block;
-   width: 100%;
-    position: relative;
-    text-align: justify;
-    align-items: left;
-    margin: 0 auto;
-    border-style: none;
-    background-color: lightgray;
-    align-items: left;
-  }
-  
-  .result:hover{
-    background-color: lightblue;
-  }
-  
-  
-  #topSearch {
-    text-align: left;
-    align-items: left;
-    position: relative;
-  }
-  
-  img.logo {
-    max-height: 50px;
-    width: auto;
-  }
-  
-  #searchdiv {
-    text-align: left;
-    align-items: left;
-    position: relative;
-  }
-  
-  #fuzzySearch {
-    min-width: 80%;
-    align-items: right;
-  }
-  
-  
-  #buttons {
-    padding-top: 50px;
-    min-width: 90%;
-    
-  }
-  
-  #buttons.container {
-    align-content: left;
-    
-  }
-  
-  #blackboardButton {
-    padding-top: 5px;
-    margin:5px;
-    min-width: 105px;
-  }
-  
-  #evisionButton {
-    padding-top: 5px;
-    margin:5px;
-    min-width: 105px;
-  }
-  
-  #officeButton {
-    padding-top: 5px;
-    margin:5px;
-    min-width: 105px;
-  }
-  
-  #covidButton {
-    padding-top: 5px;
-    margin:5px;
-    min-width: 105px;
-  }
-  
-  #campusMapButton {
-    margin: 10px;
-    margin-left: 0px;
-  }
-  
-  #findLecturerButton {
-    margin: 10px;
-    margin-left: 0px;
-  }
-  
-  #covid {
-    margin: 10px;
-    margin-left: 0px;
-  }
-  
-  .h3 {
-    text-align: centre;
-    padding-bottom: 10px;
-  }
-  
-  .card {
-    margin-bottom: 7px;
-  }
-  
-  .moonButton {
-    margin-left: 10px;
-    margin-top: 5px;
-  }
-  
-  #navSearch {
-    margin: 3px;
-  }
-  
-  
+}
+@media (max-width:767px)
+{
   .site-footer
   {
-    background-color:#26272b;
-    font-size:15px;
-    line-height:24px;
-    color:#737373;
-    height: 100%;
-    width: 100%;
+    padding-bottom:0
   }
-  
-  .site-footer hr.small
+  .site-footer .copyright-text,.site-footer .social-icons
   {
-    margin:20px 0
+    text-align:center
   }
-  .site-footer h6
-  {
-    color:#fff;
-    font-size:16px;
-    text-transform:uppercase;
-    margin-top:5px;
-    letter-spacing:2px
-  }
-  .site-footer a
-  {
-    color:#737373;
-  }
-  .site-footer a:hover
-  {
-    color:#3366cc;
-    text-decoration:none;
-  }
-  .footer-links
-  {
-    padding-left:0;
-    list-style:none
-  }
-  .footer-links li
-  {
-    display:block
-  }
-  .footer-links a
-  {
-    color:#737373
-  }
-  .footer-links a:active,.footer-links a:focus,.footer-links a:hover
-  {
-    color:#3366cc;
-    text-decoration:none;
-  }
-  .footer-links.inline li
-  {
-    display:inline-block
-  }
-  .site-footer .social-icons
-  {
-    text-align:right
-  }
-  .site-footer .social-icons a
-  {
-    width:40px;
-    height:40px;
-    line-height:40px;
-    margin-left:6px;
-    margin-right:0;
-    border-radius:100%;
-    background-color:#33353d
-  }
-  .copyright-text
-  {
-    margin:0
-  }
-  @media (max-width:991px)
-  {
-    .site-footer [class^=col-]
-    {
-      margin-bottom:30px
-    }
-  }
-  @media (max-width:767px)
-  {
-    .site-footer
-    {
-      padding-bottom:0
-    }
-    .site-footer .copyright-text,.site-footer .social-icons
-    {
-      text-align:center
-    }
-  }
-  .social-icons
-  {
-    padding-left:0;
-    margin-bottom:0;
-    list-style:none
-  }
-  .social-icons li
-  {
-    display:inline-block;
-    margin-bottom:4px
-  }
+}
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+.social-icons a.facebook:hover
+{
+  background-color:#3b5998
+}
+.social-icons a.twitter:hover
+{
+  background-color:#00aced
+}
+.social-icons a.linkedin:hover
+{
+  background-color:#007bb6
+}
+.social-icons a.dribbble:hover
+{
+  background-color:#ea4c89
+}
+@media (max-width:767px)
+{
   .social-icons li.title
   {
-    margin-right:15px;
-    text-transform:uppercase;
-    color:#96a2b2;
-    font-weight:700;
-    font-size:13px
+    display:block;
+    margin-right:0;
+    font-weight:600
   }
-  .social-icons a{
-    background-color:#eceeef;
-    color:#818a91;
-    font-size:16px;
-    display:inline-block;
-    line-height:44px;
-    width:44px;
-    height:44px;
-    text-align:center;
-    margin-right:8px;
-    border-radius:100%;
-    -webkit-transition:all .2s linear;
-    -o-transition:all .2s linear;
-    transition:all .2s linear
-  }
-  .social-icons a:active,.social-icons a:focus,.social-icons a:hover
-  {
-    color:#fff;
-    background-color:#29aafe
-  }
-  .social-icons.size-sm a
-  {
-    line-height:34px;
-    height:34px;
-    width:34px;
-    font-size:14px
-  }
-  .social-icons a.facebook:hover
-  {
-    background-color:#3b5998
-  }
-  .social-icons a.twitter:hover
-  {
-    background-color:#00aced
-  }
-  .social-icons a.linkedin:hover
-  {
-    background-color:#007bb6
-  }
-  .social-icons a.dribbble:hover
-  {
-    background-color:#ea4c89
-  }
-  @media (max-width:767px)
-  {
-    .social-icons li.title
-    {
-      display:block;
-      margin-right:0;
-      font-weight:600
-    }
-  }
-  
-  
-  
+}
+
+.fa-search {
+  color: white;
+  padding: 2px;
+}
+
+.fa-moon {
+  color: white;
+}
+
+#submitButton {
+  margin: 10px;
+}
+
+#showAllButton {
+  margin: 5px;
+}
+
+
+p{
+  color: white;
+}
+h1{
+  color: white;
+}
+h2{
+  color: white;
+}
+h3{
+  color: white;
+}
+
+.forceWhite{
+  color: white;
+}
+
+.forceBlack{
+  color: black;
+}
